plugins {
    id 'war'
    id 'maven-publish'
    id 'com.diffplug.spotless' version '7.0.4'
    id 'java'
    id 'jacoco'
    id 'checkstyle'
    id 'org.jetbrains.dokka' version '1.9.20'
}

repositories {
    mavenCentral()
    mavenLocal()
}

apply from: 'opencadc.gradle'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

war {
    archiveFileName = 'skaha.war'
}

copy {
    from(System.getenv('A') + '/etc/') {
        include 'RsaSignaturePub.key'
    }
    into 'src/main/resources'
}

tasks.withType(Copy).configureEach {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

dependencies {
    providedCompile 'javax.servlet:javax.servlet-api:[3.1.0,)'

    // Used to assemble URIs programmatically
    implementation 'org.apache.httpcomponents.client5:httpclient5:[5.4.1,5.5)'

    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'
    implementation 'com.google.code.gson:gson:2.8.9'

    implementation 'commons-io:commons-io:[2.14.0,3.0.0)'

    // Used to merge YAML sections to fully configure Job files.
    // Ensure the Snake YAML version is 2.5 to prevent unnecessary logging of WARNING messages.
    implementation 'org.yaml:snakeyaml:2.5'
    implementation "io.kubernetes:client-java:${kubernetesClientJavaVersion}"

    // Used to read configuration from the environment and property files.
    implementation 'org.apache.commons:commons-configuration2:[2.11.0,3.0.0)'

    implementation 'org.opencadc:cadc-access-control:[1.1.29,1.2.0)'
    implementation 'org.opencadc:cadc-access-control-identity:[1.1.0,)'
    implementation 'org.opencadc:cadc-cdp:[1.2,)'
    implementation 'org.opencadc:cadc-gms:[1.0.15,2.0)'
    implementation 'org.opencadc:cadc-log:[1.2.1,1.3.0)'
    implementation 'org.opencadc:cadc-rest:[1.4.0,)'
    implementation 'org.opencadc:cadc-util:[1.12.7,2.0)'
    implementation 'org.opencadc:cadc-uws-server:[1.1.3,)'
    implementation 'org.opencadc:cadc-vos-client:[2.0.6,2.1.0)'
    implementation 'org.opencadc:cadc-vosi:[1.4.3,)'
    implementation 'org.opencadc:cadc-permissions:[0.3.4,2.0)'
    implementation 'org.opencadc:cadc-registry:[1.7.7,)'
    implementation 'redis.clients:jedis:[5.0.2,6.0.0)'

    // JSON schema validator
    testImplementation 'com.github.erosb:everit-json-schema:1.14.6'
    testImplementation 'junit:junit:[4.13,)'
    testImplementation 'org.json:json:20251224'
    testImplementation 'org.mockito:mockito-core:5.21.0'
}

spotless {
  java {
    // Interpret all files as utf-8
    encoding 'UTF-8'
    // Only require formatting of files that diff from main
    ratchetFrom 'origin/main'
    // Use the default importOrder configuration
    importOrder()
    // Remove unused imports
    removeUnusedImports()
    // Google Java Format, Android Open Source Project style which uses 4 spaces for indentation
    palantirJavaFormat().formatJavadoc(true)
    // Format annotations on a single line
    formatAnnotations()

    // Checks for javadoc formatting
    checkstyle {
      // Point to the same checkstyle.xml file as the checkstyle task
      configFile file("${projectDir}/checkstyle.xml")
    }
  }
}
check.dependsOn spotlessCheck

// Create Java Code Coverage Reports
jacocoTestReport {
    reports {
        xml.required = true
        html.required = true
    }
}
check.dependsOn jacocoTestReport

// Create JavaDoc
javadoc {
    destinationDir = file("${layout.buildDirectory}/docs/javadoc")
}

// Create Java Documentation using Dokka for Github Markdown and HTML
tasks.dokkaGfm.configure {
    outputDirectory.set(file("${layout.buildDirectory}/docs/dokka/gfm"))
    dokkaSourceSets {
        register("main") {
            sourceRoots.from(file("src/main/java"))
        }
    }
}
tasks.dokkaHtml.configure {
    outputDirectory.set(file("${layout.buildDirectory}/docs/dokka/html"))
    dokkaSourceSets {
        register("main") {
            sourceRoots.from(file("src/main/java"))
        }
        configureEach {
            jdkVersion.set(21)
            sourceLink {
                localDirectory.set(file("src/main/java"))
                remoteUrl.set("https://github.com/opencadc/science-platform/tree/main/skaha/src/main/java")
            }
        }
    }
}
